[tool.poetry]
name = "kalel-dev"
version = "0.1.0"
description = ""
authors = ["Kalel L. Martinho <kalel@tutamail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ignr = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
