[tool.poetry]
name = "kalel-dev"
version = "0.1.0"
description = ""
authors = ["Kalel L. Martinho <kalel@tutamail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
jinja2 = "^3.1.2"
beanie = "^1.24.0"
itsdangerous = "^2.1.2"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ignr = "^2.2"
taskipy = "^1.12.2"
ruff = "^0.1.9"
mypy = "^1.8.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytailwindcss = "^0.2.0"
watchfiles = "^0.21.0"

[tool.ruff]
exclude = [".venv"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"

[tool.taskipy.tasks]
run = "uvicorn kalel_dev.main:app --reload --reload-include *.html --host 0.0.0.0"
css = "tailwindcss -i ./kalel_dev/static/src/tw.css -o ./kalel_dev/static/css/main.css --watch"
lint = "ruff . && ruff check --select I . && ruff format . --check && mypy ."
format = "ruff . --fix && ruff format . && ruff check --select I . --fix"
pre_test = "task lint"
test = "pytest -s -x --cov=kalel_dev --cov-report=term-missing"
post_test = "coverage html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
